fixed spacing between the image/text on moons page

--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,6 @@ background-color: #e2e2e2;
 text-align: center;
 }
 
-
 @media only screen and (min-width: 25em) {
  
 .nav li { 
@@ -132,4 +131,17 @@ text-align: left;
 }
 
 @media only screen and (min-width: 60em){
+    dd {
+float: left;
+}
+
+dt {
+float: left;
+clear: left;
+width: 11rem;
+}
+
+.spaceleft{
+padding-left: 2em;
+}
 }
